--- a/client/src/styles/CoffeeItem.css
+++ b/client/src/styles/CoffeeItem.css
@@ -1,6 +1,17 @@
 .coffee-item {
-    background-color: beige;
-    border-radius: 6px;
-    width: 25vw;
-    margin-top: 10px;
+    border: 2px solid #ccc;
+    border-radius: 20px;
+    width: 22vw;
+    margin: 10px;
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    button {
+        background-color: purple;
+        border: none;
+        width: 8vw;
+    }
 }
