--- a/client/src/styles/CoffeeItem.css
+++ b/client/src/styles/CoffeeItem.css
@@ -1,9 +1,9 @@
 .coffee-item {
-    border: 2px solid #ccc;
+    border: 2px solid #cccccc9c;
     border-radius: 20px;
-    width: 22vw;
+    width: 18vw;
     margin: 10px;
-    height: 380px;
+    height: 340px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,5 +13,9 @@
         background-color: purple;
         border: none;
         width: 8vw;
+    }
+
+    p {
+        font-size: 20px;
     }
 }
