--- a/client/src/styles/CoffeeList.css
+++ b/client/src/styles/CoffeeList.css
@@ -1,6 +1,7 @@
 .coffee-list {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
